exports[`consistent-type-definitions > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-definitions",
      "messageId": "interfaceOverType",
      "message": "Use an \`interface\` instead of a \`type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 6
        },
        "end": {
          "line": 1,
          "column": 7
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-definitions > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-definitions",
      "messageId": "interfaceOverType",
      "message": "Use an \`interface\` instead of a \`type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 6
        },
        "end": {
          "line": 1,
          "column": 7
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-definitions > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-definitions",
      "messageId": "interfaceOverType",
      "message": "Use an \`interface\` instead of a \`type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 6
        },
        "end": {
          "line": 1,
          "column": 7
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-definitions > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-definitions",
      "messageId": "interfaceOverType",
      "message": "Use an \`interface\` instead of a \`type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 6
        },
        "end": {
          "line": 1,
          "column": 7
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-definitions > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-definitions",
      "messageId": "interfaceOverType",
      "message": "Use an \`interface\` instead of a \`type\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 13
        },
        "end": {
          "line": 2,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`consistent-type-definitions > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-type-definitions",
      "messageId": "typeOverInterface",
      "message": "Use a \`type\` instead of an \`interface\`.",
      "filePath": "src/consistent-type-exports.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 18
        },
        "end": {
          "line": 3,
          "column": 23
        }
      }
    },
    {
      "ruleName": "consistent-type-definitions",
      "messageId": "typeOverInterface",
      "message": "Use a \`type\` instead of an \`interface\`.",
      "filePath": "src/consistent-type-exports/type-only-exports.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 18
        },
        "end": {
          "line": 3,
          "column": 23
        }
      }
    },
    {
      "ruleName": "consistent-type-definitions",
      "messageId": "typeOverInterface",
      "message": "Use a \`type\` instead of an \`interface\`.",
      "filePath": "src/consistent-type-exports/type-only-exports.ts",
      "range": {
        "start": {
          "line": 11,
          "column": 20
        },
        "end": {
          "line": 11,
          "column": 21
        }
      }
    },
    {
      "ruleName": "consistent-type-definitions",
      "messageId": "typeOverInterface",
      "message": "Use a \`type\` instead of an \`interface\`.",
      "filePath": "src/debug-circular.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 11
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    },
    {
      "ruleName": "consistent-type-definitions",
      "messageId": "typeOverInterface",
      "message": "Use a \`type\` instead of an \`interface\`.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 11
        },
        "end": {
          "line": 1,
          "column": 12
        }
      }
    }
  ],
  "errorCount": 5,
  "fileCount": 7,
  "ruleCount": 1
}
`;
